Recognize Ctrl-Q and Ctrl-W under Hebrew keyboard layout on Linux. Bug 452393, r=masayuki, karlt